--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,7 @@ include 'marytts-languages:marytts-lang-ru'
 include 'marytts-languages:marytts-lang-sv'
 include 'marytts-languages:marytts-lang-te'
 include 'marytts-languages:marytts-lang-tr'
+include 'marytts-languages:marytts-lang-pt'
 include 'marytts-runtime'
 include 'marytts-signalproc'
 include 'voice-cmu-slt-hsmm'
